Add timestamp to healthcheck
